add new website from server na

--- a/xem-phim-bo/binh-minh-cua-phu-thuy/index.html
+++ b/xem-phim-bo/binh-minh-cua-phu-thuy/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1655,21 +1655,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tram-11" title="Trạm 11">
+          <a class="list-top-movie-link" href="/phim-moi/hoanh-hanh-ba-dao" title="Hoành Hành Bá Đạo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tram-11-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoanh-hanh-ba-dao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trạm 11
+             Hoành Hành Bá Đạo
             </span>
             <span class="list-top-movie-item-en">
-             Station Eleven
+             Run Amuck
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1677,21 +1677,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khong-chua-mot-ai" title="Không Chừa Một Ai">
+          <a class="list-top-movie-link" href="/phim-moi/sung-ai" title="Sủng Ái">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-chua-mot-ai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sung-ai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Không Chừa Một Ai
+             Sủng Ái
             </span>
             <span class="list-top-movie-item-en">
-             No One Lives
+             The Favourite
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1699,18 +1699,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tharntype-tu-ghet-toi-yeu-phan-2" title="TharnType: Từ ghét tới yêu (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/digimon-adventure-tri-chuong-2-quyet-tam" title="Digimon Adventure Tri. – Chương 2: Quyết Tâm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tharntype-tu-ghet-toi-yeu-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/digimon-adventure-tri-chuong-2-quyet-tam-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             TharnType: Từ ghét tới yêu (Phần 2)
+             Digimon Adventure Tri. – Chương 2: Quyết Tâm
             </span>
             <span class="list-top-movie-item-en">
-             TharnType the series (Season 2)
+             Digimon Adventure tri. 2: Ketsui Digimon Adventure Tri. - Chapter 2: Determination
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1743,21 +1743,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/epic-movie" title="Epic Movie">
+          <a class="list-top-movie-link" href="/phim-moi/tin-hieu-trai-tim-mua-7" title="Tín Hiệu Trái Tim Mùa 7">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/epic-movie-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tin-hieu-trai-tim-mua-7-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Epic Movie
+             Tín Hiệu Trái Tim Mùa 7
             </span>
             <span class="list-top-movie-item-en">
-             Epic Movie
+             Heart Signal ss7
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
