add new website from server na

--- a/xem-phim-bo/chien-quoc-thien-nien/index.html
+++ b/xem-phim-bo/chien-quoc-thien-nien/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khung-hinh-thoi-gian" title="Khung hình thời gian">
+          <a class="list-top-movie-link" href="/phim-moi/tieu-thu-va-ga-lang-thang" title="Tiểu Thư Và Gã Lang Thang">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khung-hinh-thoi-gian-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-thu-va-ga-lang-thang-2019-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khung hình thời gian
+             Tiểu Thư Và Gã Lang Thang
             </span>
             <span class="list-top-movie-item-en">
-             A Frame in Time
+             Lady and the Tramp
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vung-tu-dia" title="Vùng Tử Địa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-tu-dia-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vùng Tử Địa
+            </span>
+            <span class="list-top-movie-item-en">
+             Into The Badlands
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,40 +1703,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-dien-dai" title="Yêu Điên Dại">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-khong-trong-luc" title="Người không trọng lực">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-dien-dai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-khong-trong-luc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yêu Điên Dại
+             Người không trọng lực
             </span>
             <span class="list-top-movie-item-en">
-             Head Over Heels
-            </span>
-            <span class="list-top-movie-item-view">
-             11 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mot-gay-la-vao-lo" title="Một Gậy Là Vào Lỗ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-gay-la-vao-lo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Một Gậy Là Vào Lỗ
-            </span>
-            <span class="list-top-movie-item-en">
-             홀인원: 어서 와서 넣어줘요
+             The Man Without Gravity
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,21 +1725,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xa-nho-vung-nui" title="Xã nhỏ vùng núi">
+          <a class="list-top-movie-link" href="/phim-moi/to-giac" title="Tố Giác">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xa-nho-vung-nui-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-giac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xã nhỏ vùng núi
+             Tố Giác
             </span>
             <span class="list-top-movie-item-en">
-             Rurd Credit Union in Mountain Areas
+             The Whistleblower
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1747,21 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-co-nguoi-yeu-goi-cam" title="Những Cô Người Yêu Gợi Cảm">
+          <a class="list-top-movie-link" href="/phim-moi/lam-lai-cuoc-doi-3" title="Làm lại cuộc đời">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-nguoi-yeu-goi-cam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-lai-cuoc-doi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Cô Người Yêu Gợi Cảm
+             Làm lại cuộc đời
             </span>
             <span class="list-top-movie-item-en">
-             Delicious Destiny
+             The Do-Over
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
