add new website from server na

--- a/xem-phim-bo/gia-thien/index.html
+++ b/xem-phim-bo/gia-thien/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ai-da-giet-malcolm-x" title="Ai đã giết Malcolm X?">
+          <a class="list-top-movie-link" href="/phim-moi/hau-truyen-thap-ly-dao-hoa" title="Hậu Truyện Thập Lý Đào Hoa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ai-da-giet-malcolm-x-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hau-truyen-thap-ly-dao-hoa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ai đã giết Malcolm X?
+             Hậu Truyện Thập Lý Đào Hoa
             </span>
             <span class="list-top-movie-item-en">
-             Who Killed Malcolm X?
+             Story After Eternal Love
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1677,18 +1677,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bad-words" title="Bad Words">
+          <a class="list-top-movie-link" href="/phim-moi/illang-lu-doan-soi" title="Illang: Lữ đoàn sói">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bad-words-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/illang-lu-doan-soi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bad Words
+             Illang: Lữ đoàn sói
             </span>
             <span class="list-top-movie-item-en">
-             Bad Words
+             Illang: The Wolf Brigade
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/di-do-khong-gian" title="Dị Độ Không Gian">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-do-khong-gian-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dị Độ Không Gian
+            </span>
+            <span class="list-top-movie-item-en">
+             Inner Senses
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nu-tuoi-13" title="Thiếu Nữ Tuổi 13">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nu-tuoi-13-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Nữ Tuổi 13
+            </span>
+            <span class="list-top-movie-item-en">
+             13 Going on 30
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1699,62 +1743,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-si-ngoai-hanh-tinh-phan-3" title="Bác Sĩ Ngoài Hành Tinh (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/gia-gan" title="Già Gân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-ngoai-hanh-tinh-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-gan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bác Sĩ Ngoài Hành Tinh (Phần 3)
+             Già Gân
             </span>
             <span class="list-top-movie-item-en">
-             Resident Alien (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hom-nay-nhat-dinh-thang" title="Hôm nay nhất định thắng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hom-nay-nhat-dinh-thang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hôm nay nhất định thắng
-            </span>
-            <span class="list-top-movie-item-en">
-             Go Eight
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cryptozoo" title="Cryptozoo">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cryptozoo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cryptozoo
-            </span>
-            <span class="list-top-movie-item-en">
-             Cryptozoo
+             The Mule
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
