add new website from server na

--- a/xem-phim-bo/toi-tro-nen-manh-hon-nho-nang-cap-cac-ky-nang-cua-nong-dan/index.html
+++ b/xem-phim-bo/toi-tro-nen-manh-hon-nho-nang-cap-cac-ky-nang-cua-nong-dan/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1659,40 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dieu-ky-dieu" title="Điều Kỳ Diệu">
+          <a class="list-top-movie-link" href="/phim-moi/bang-hoa-ma-tru" title="Băng Hoả Ma Trù">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-ky-dieu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-hoa-ma-tru-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Điều Kỳ Diệu
+             Băng Hoả Ma Trù
             </span>
             <span class="list-top-movie-item-en">
-             Wonder
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-mole-ai-la-noi-gian" title="The Mole: Ai là nội gián">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-mole-ai-la-noi-gian-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             The Mole: Ai là nội gián
-            </span>
-            <span class="list-top-movie-item-en">
-             The Mole
+             The Magic Chef Of Ice and Fire
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1703,18 +1681,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/be-boi-bettencourt-nu-ty-phu-nguoi-quan-gia-va-ban-trai" title="Bê bối Bettencourt: Nữ tỷ phú, người quản gia và bạn trai">
+          <a class="list-top-movie-link" href="/phim-moi/southbound" title="Southbound">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/be-boi-bettencourt-nu-ty-phu-nguoi-quan-gia-va-ban-trai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/southbound-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bê bối Bettencourt: Nữ tỷ phú, người quản gia và bạn trai
+             Southbound
             </span>
             <span class="list-top-movie-item-en">
-             The Billionaire, The Butler, and the Boyfriend
+             Southbound
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ba-co-em-gai-dam-dang" title="Ba Cô Em Gái Đảm Đang">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-co-em-gai-dam-dang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ba Cô Em Gái Đảm Đang
+            </span>
+            <span class="list-top-movie-item-en">
+             Covert Report Of Allegations
             </span>
             <span class="list-top-movie-item-view">
              6 lượt xem
@@ -1725,21 +1725,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-si-bao-thu-2" title="Võ sĩ báo thù">
+          <a class="list-top-movie-link" href="/phim-moi/ishiko-va-haneo-ban-kien-toi-day-a" title="ISHIKO và HANEO: Bạn kiện tôi đấy à?">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-si-bao-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ishiko-va-haneo-ban-kien-toi-day-a-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Võ sĩ báo thù
+             ISHIKO và HANEO: Bạn kiện tôi đấy à?
             </span>
             <span class="list-top-movie-item-en">
-             Kickboxer: Vengeance
+             ISHIKO and HANEO: You're Suing Me?
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1747,21 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/out-of-the-blue" title="Out of the Blue">
+          <a class="list-top-movie-link" href="/phim-moi/ke-vo-hinh" title="Kẻ vô hình">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/out-of-the-blue-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-vo-hinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Out of the Blue
+             Kẻ vô hình
             </span>
             <span class="list-top-movie-item-en">
-             Out of the Blue
+             The Invisible Man
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
