add new website from server na

--- a/xem-phim-bo/lap-harem-chon-me-cung-o-di-gioi/index.html
+++ b/xem-phim-bo/lap-harem-chon-me-cung-o-di-gioi/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1663,18 +1663,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/survival-of-the-snow-leopard" title="Survival Of The Snow Leopard">
+          <a class="list-top-movie-link" href="/phim-moi/su-troi-day-cua-cac-ve-than" title="Sự Trỗi Dậy Của Các Vệ Thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/survival-of-the-snow-leopard-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-troi-day-cua-cac-ve-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Survival Of The Snow Leopard
+             Sự Trỗi Dậy Của Các Vệ Thần
             </span>
             <span class="list-top-movie-item-en">
-             Survival Of The Snow Leopard
+             Rise of the Guardians
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1685,18 +1685,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngay-trong-dai-phan-2" title="Ngày trọng đại (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/nghe-thuat-nau-an" title="Nghệ thuật nấu ăn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-trong-dai-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nghe-thuat-nau-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngày trọng đại (Phần 2)
+             Nghệ thuật nấu ăn
             </span>
             <span class="list-top-movie-item-en">
-             The Big Day (Season 2)
+             Cooked
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/loi-nguyen-tuoi-20" title="Lời Nguyền Tuổi 20">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-nguyen-tuoi-20-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lời Nguyền Tuổi 20
+            </span>
+            <span class="list-top-movie-item-en">
+             My 20th Twenty
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1707,21 +1729,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/silenced" title="Silenced">
+          <a class="list-top-movie-link" href="/phim-moi/than-bai-tro-lai-tat-tay" title="Thần Bài Trở Lại Tất Tay">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/silenced-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-bai-tro-lai-tat-tay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Silenced
+             Thần Bài Trở Lại Tất Tay
             </span>
             <span class="list-top-movie-item-en">
-             Silenced
+             All In
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1729,43 +1751,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/me-chong-tao-ton-phan-2" title="Mẹ chồng táo tợn (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/dem-trang-yeu-trong-mong-mi" title="Đêm trắng: Yêu trong mộng mị">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-chong-tao-ton-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-trang-yeu-trong-mong-mi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mẹ chồng táo tợn (Phần 2)
+             Đêm trắng: Yêu trong mộng mị
             </span>
             <span class="list-top-movie-item-en">
-             Smother-in-Law (Season 2)
+             Sleepless Society: Two Pillows &amp; A Lost Soul
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-flight" title="Angel Flight">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/angel-flight-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Flight
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Flight
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
